--- a/hamming/pom.xml
+++ b/hamming/pom.xml
@@ -5,9 +5,16 @@
     <parent>
         <artifactId>phdResearch</artifactId>
         <groupId>com.trident</groupId>
-        <version>{project.version}</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>hamming-research</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>cc.redberry</groupId>
+            <artifactId>rings</artifactId>
+        </dependency>
+    </dependencies>
 </project>
