--- a/pom.xml
+++ b/pom.xml
@@ -27,17 +27,8 @@
 
     <modules>
         <module>hamming</module>
+        <module>math</module>
     </modules>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>cc.redberry</groupId>
-                <artifactId>rings</artifactId>
-                <version>2.5.2</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <!--Test dependencies-->
