--- a/math/finite-field/pom.xml
+++ b/math/finite-field/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>math</artifactId>
         <groupId>com.trident</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
