--- a/math/matrix/pom.xml
+++ b/math/matrix/pom.xml
@@ -3,19 +3,23 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>phdResearch</artifactId>
+        <artifactId>math</artifactId>
         <groupId>com.trident</groupId>
         <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hamming-research</artifactId>
+    <artifactId>matrix</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.trident</groupId>
-            <artifactId>matrix</artifactId>
+            <artifactId>finite-field</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
 </project>
