--- a/math/pom.xml
+++ b/math/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>phdResearch</artifactId>
         <groupId>com.trident</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>finite-field</module>
+        <module>matrix</module>
     </modules>
 
     <dependencyManagement>
