--- a/hamming-correction-research/pom.xml
+++ b/hamming-correction-research/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.trident</groupId>
-            <artifactId>math</artifactId>
+            <artifactId>math-core</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
