--- a/math/pom.xml
+++ b/math/pom.xml
@@ -11,22 +11,10 @@
 
     <artifactId>math</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>cc.redberry</groupId>
-            <artifactId>rings</artifactId>
-            <version>2.5.2</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.6.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-    </dependencies>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>math-core</module>
+    </modules>
 
 </project>
