--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
                 <artifactId>guava</artifactId>
                 <version>29.0-jre</version>
             </dependency>
+            <dependency>
+                <groupId>org.immutables</groupId>
+                <artifactId>value</artifactId>
+                <version>2.8.2</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
