Test HammingCodeDto deserealization

--- a/math/math-io/pom.xml
+++ b/math/math-io/pom.xml
@@ -26,6 +26,10 @@
             <artifactId>value</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
