--- a/hamming-correction-research/pom.xml
+++ b/hamming-correction-research/pom.xml
@@ -17,5 +17,14 @@
             <artifactId>math-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.trident</groupId>
+            <artifactId>math-io</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 </project>
