--- a/hamming-correction-research/pom.xml
+++ b/hamming-correction-research/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>value</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
