--- a/bch-correction-research/pom.xml
+++ b/bch-correction-research/pom.xml
@@ -5,21 +5,16 @@
     <parent>
         <artifactId>phdResearch</artifactId>
         <groupId>com.trident</groupId>
-        <version>${revision}</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hamming-correction-research</artifactId>
+    <artifactId>bch-correction-research</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.trident</groupId>
             <artifactId>math-core</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.trident</groupId>
-            <artifactId>math-io</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -49,7 +44,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.trident.hamming.correction.Runner</mainClass>
+                            <mainClass>com.trident.bch.correction.Runner</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
