--- a/correction-research/hamming-correction-research/pom.xml
+++ b/correction-research/hamming-correction-research/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>com.trident</groupId>
+            <artifactId>correction-research-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.trident</groupId>
             <artifactId>math-io</artifactId>
             <version>${project.version}</version>
         </dependency>
