Add BCH correction statistics calculators

--- a/correction-research/correction-research-common/pom.xml
+++ b/correction-research/correction-research-common/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>math-core</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
