--- a/correction-research/bch-correction-research/pom.xml
+++ b/correction-research/bch-correction-research/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.trident</groupId>
-            <artifactId>math-core</artifactId>
+            <artifactId>correction-research-common</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
