--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     <modules>
         <module>math</module>
         <module>correction-research</module>
+        <module>barcode-research</module>
     </modules>
 
     <dependencyManagement>
