Barcode. Image generator.

--- a/barcode-research/pom.xml
+++ b/barcode-research/pom.xml
@@ -12,5 +12,6 @@
     <modules>
 
         <module>barcode-research-model</module>
+        <module>barcode-image-generator</module>
     </modules>
 </project>
