--- a/barcode-generation-service/pom.xml
+++ b/barcode-generation-service/pom.xml
@@ -20,6 +20,17 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Micrometer Prometheus registry  -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.trident</groupId>
             <artifactId>barcode-image-generator</artifactId>
