--- a/barcode-generation-service/src/main/resources/prometheus.yaml
+++ b/barcode-generation-service/src/main/resources/prometheus.yaml
@@ -16,4 +16,4 @@ scrape_configs:
     metrics_path: '/actuator/prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:8080']
+      - targets: ['192.168.88.252:8080']
