Add percentiles to http metrics. Updated load scripts

--- a/barcode-generation-service/src/main/resources/application.yaml
+++ b/barcode-generation-service/src/main/resources/application.yaml
@@ -3,3 +3,4 @@ management:
     web:
       exposure:
         include: "health,info,prometheus"
+  metrics.web.server.request.autotime.percentiles: 0.99,0.95,0.5
