--- a/barcode-generation-service/pom.xml
+++ b/barcode-generation-service/pom.xml
@@ -32,6 +32,18 @@
         </dependency>
 
         <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.trident</groupId>
             <artifactId>barcode-image-generator</artifactId>
             <version>${revision}</version>
