2 load scripts. Add explicit log level in application.yaml

--- a/barcode-generation-service/src/main/resources/application.yaml
+++ b/barcode-generation-service/src/main/resources/application.yaml
@@ -4,3 +4,5 @@ management:
       exposure:
         include: "health,info,prometheus"
   metrics.web.server.request.autotime.percentiles: 0.99,0.95,0.5
+
+logging.level.root: "INFO"
