--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,7 +5,7 @@
 
 # Prerequisites: pom.xml and appropriate project structure should exist in the repository.
 
-image: openjdk:19
+image: maven:3.9.6-amazoncorretto-17
 
 pipelines:
   default:
