--- a/barcode-generation-service/pom.xml
+++ b/barcode-generation-service/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.trident</groupId>
-        <artifactId>phdResearch</artifactId>
+        <artifactId>barcode-research</artifactId>
         <version>${revision}</version>
     </parent>
     <artifactId>barcode-generation-service</artifactId>
