--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -32,6 +32,6 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish package
-        run: echo ${{ steps.tag_version.outputs.new_tag }} && mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Drevision=${{ steps.tag_version.outputs.new_tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
