--- a/barcode-generation-service/src/main/resources/application.yaml
+++ b/barcode-generation-service/src/main/resources/application.yaml
@@ -6,3 +6,6 @@ management:
   metrics.web.server.request.autotime.percentiles: 0.99,0.95,0.5
 
 logging.level.root: "INFO"
+
+server:
+  port: ${PORT:8080}
