--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,12 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
           cache: maven
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
       - name: Bump version and push tag
         id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish package
-        run: mvn --batch-mode deploy -Drevision=${{ steps.tag_version.outputs.new_tag }} -DskipTests
+        run: mvn --batch-mode deploy -Drevision=${{ steps.tag_version.outputs.new_tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
